--- a/unbound/personal.blacklist.conf
+++ b/unbound/personal.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 1 day
-# Last modified: 30 Jun 2023 08:56 UTC
-# Version: 2023.0630.0856.16
+# Last modified: 30 Jun 2023 22:26 UTC
+# Version: 2023.0630.2226.29
 # Syntax: Unbound
-# Number of entries: 42038
+# Number of entries: 42026
 #
 server:
 local-zone: "000space.com." always_nxdomain
@@ -73,7 +73,6 @@ local-zone: "jf.10010.com." always_nxdomain
 local-zone: "smartad.10010.com." always_nxdomain
 local-zone: "albatross.10086.cn." always_nxdomain
 local-zone: "sdc.10086.cn." always_nxdomain
-local-zone: "app2.10090dfs.com." always_nxdomain
 local-zone: "100cheapjordans.com." always_nxdomain
 local-zone: "static.100conversions.com." always_nxdomain
 local-zone: "xml-v4.100conversions.com." always_nxdomain
@@ -82,7 +81,6 @@ local-zone: "100widgets.com." always_nxdomain
 local-zone: "100ytrf.com." always_nxdomain
 local-zone: "101com.com." always_nxdomain
 local-zone: "101m3.com." always_nxdomain
-local-zone: "105.pl." always_nxdomain
 local-zone: "109c957fb6.com." always_nxdomain
 local-zone: "10bet.com." always_nxdomain
 local-zone: "10cbc8a64e.com." always_nxdomain
@@ -1278,6 +1276,7 @@ local-zone: "r.aachener-zeitung.de." always_nxdomain
 local-zone: "t.aachener-zeitung.de." always_nxdomain
 local-zone: "aacihealthcare.com." always_nxdomain
 local-zone: "aadirone.cc." always_nxdomain
+local-zone: "aadrm.com." always_nxdomain
 local-zone: "ssl.aafp.org." always_nxdomain
 local-zone: "aagm.link." always_nxdomain
 local-zone: "aagomsi.xyz." always_nxdomain
@@ -2808,6 +2807,7 @@ local-zone: "aggravatecapeamoral.com." always_nxdomain
 local-zone: "aggregateknowledge.com." always_nxdomain
 local-zone: "aggregationmulecontribution.com." always_nxdomain
 local-zone: "aggressivefrequentneckquirky.com." always_nxdomain
+local-zone: "aggrologis.top." always_nxdomain
 local-zone: "tracking.aggrosoft.de." always_nxdomain
 local-zone: "aghaneefigurae.com." always_nxdomain
 local-zone: "aghnikogxlk.com." always_nxdomain
@@ -3284,18 +3284,7 @@ local-zone: "retcode-sg-lazada.arms.aliyuncs.com." always_nxdomain
 local-zone: "beacon-api.aliyuncs.com." always_nxdomain
 local-zone: "adash-emas.cn-hangzhou.aliyuncs.com." always_nxdomain
 local-zone: "log.aliyuncs.com." always_nxdomain
-local-zone: "alfa.log-global.aliyuncs.com." always_nxdomain
-local-zone: "bb-client-new.log-global.aliyuncs.com." always_nxdomain
-local-zone: "bepicdata.log-global.aliyuncs.com." always_nxdomain
-local-zone: "console-base.log-global.aliyuncs.com." always_nxdomain
-local-zone: "haokan-tracking-log.log-global.aliyuncs.com." always_nxdomain
-local-zone: "hdp-client-logger-log.log-global.aliyuncs.com." always_nxdomain
-local-zone: "hdp-raw-log.log-global.aliyuncs.com." always_nxdomain
-local-zone: "hub-plan-log-1.log-global.aliyuncs.com." always_nxdomain
-local-zone: "icbu-fe-log.log-global.aliyuncs.com." always_nxdomain
-local-zone: "onetouch-uba-general.log-global.aliyuncs.com." always_nxdomain
-local-zone: "powertide-globle-tracking.log-global.aliyuncs.com." always_nxdomain
-local-zone: "sc-assets-trade.log-global.aliyuncs.com." always_nxdomain
+local-zone: "log-global.aliyuncs.com." always_nxdomain
 local-zone: "adash.man.aliyuncs.com." always_nxdomain
 local-zone: "logistics-wfm.oss-ap-southeast-1.aliyuncs.com." always_nxdomain
 local-zone: "mgtv-bbqn.oss-cn-beijing.aliyuncs.com." always_nxdomain
@@ -3339,7 +3328,6 @@ local-zone: "data.allgaeuer-zeitung.de." always_nxdomain
 local-zone: "data-44384eebca.allgaeuer-zeitung.de." always_nxdomain
 local-zone: "allhypefeed.com." always_nxdomain
 local-zone: "alli-ti-hunter.com." always_nxdomain
-local-zone: "dc.allianz.de." always_nxdomain
 local-zone: "sdc.allianz.de." always_nxdomain
 local-zone: "sxp.allianz.de." always_nxdomain
 local-zone: "wz.allianz.fr." always_nxdomain
@@ -5875,6 +5863,7 @@ local-zone: "ipfs.best-practice.se." always_nxdomain
 local-zone: "best-prize.life." always_nxdomain
 local-zone: "best-site-online.com." always_nxdomain
 local-zone: "best-targeted-traffic.com." always_nxdomain
+local-zone: "best-vpn-app.com." always_nxdomain
 local-zone: "best4fuck.com." always_nxdomain
 local-zone: "bestadload.com." always_nxdomain
 local-zone: "bestageoffers22.com." always_nxdomain
@@ -5955,7 +5944,6 @@ local-zone: "events.betterhelp.com." always_nxdomain
 local-zone: "bettermail-news.de." always_nxdomain
 local-zone: "bettermeter.com." always_nxdomain
 local-zone: "bettermetrics.co." always_nxdomain
-local-zone: "bettershitecolumn.com." always_nxdomain
 local-zone: "bettingpartners.com." always_nxdomain
 local-zone: "bettingpremier.com." always_nxdomain
 local-zone: "bettingstugan.se." always_nxdomain
@@ -6202,6 +6190,7 @@ local-zone: "bitcllpay.top." always_nxdomain
 local-zone: "bitclubnetwork.com." always_nxdomain
 local-zone: "bitcoadz.io." always_nxdomain
 local-zone: "bitcoinera.app." always_nxdomain
+local-zone: "bitcoineranew.com." always_nxdomain
 local-zone: "seed.bitcoinstats.com." always_nxdomain
 local-zone: "sstats.bitdefender.com." always_nxdomain
 local-zone: "starget.bitdefender.com." always_nxdomain
@@ -6519,7 +6508,6 @@ local-zone: "boftogro.net." always_nxdomain
 local-zone: "bogsboot.com." always_nxdomain
 local-zone: "so.boh.com." always_nxdomain
 local-zone: "bohemia-marketlink.com." always_nxdomain
-local-zone: "bohobanjaara.com." always_nxdomain
 local-zone: "boholnaldixtours.com." always_nxdomain
 local-zone: "bohonef.com." always_nxdomain
 local-zone: "boilingbeetle.com." always_nxdomain
@@ -6539,7 +6527,6 @@ local-zone: "track.boldem.cz." always_nxdomain
 local-zone: "bolejug.us." always_nxdomain
 local-zone: "secure.bolt8snap.com." always_nxdomain
 local-zone: "boltepse.com." always_nxdomain
-local-zone: "bom.so." always_nxdomain
 local-zone: "bombardina.pl." always_nxdomain
 local-zone: "bomboms.lol." always_nxdomain
 local-zone: "bomboms.xyz." always_nxdomain
@@ -6676,6 +6663,7 @@ local-zone: "boygcranage.com." always_nxdomain
 local-zone: "boyishabow.com." always_nxdomain
 local-zone: "ads.boylesports.com." always_nxdomain
 local-zone: "boyporn.net." always_nxdomain
+local-zone: "boywhowascr.info." always_nxdomain
 local-zone: "bp5hq5jivj.ru." always_nxdomain
 local-zone: "bpaqzithab.com." always_nxdomain
 local-zone: "bpath.com." always_nxdomain
@@ -7681,10 +7669,7 @@ local-zone: "cdntrf.com." always_nxdomain
 local-zone: "rumstat.cdnvideo.ru." always_nxdomain
 local-zone: "rumstat-01.cdnvideo.ru." always_nxdomain
 local-zone: "unisound.cdnvideo.ru." always_nxdomain
-local-zone: "hegdcrxavrtk.cdnvideo3.com." always_nxdomain
-local-zone: "pnpjceawvmeu.cdnvideo3.com." always_nxdomain
-local-zone: "uacabilqlgpw.cdnvideo3.com." always_nxdomain
-local-zone: "umtpopxcsedc.cdnvideo3.com." always_nxdomain
+local-zone: "cdnvideo3.com." always_nxdomain
 local-zone: "cdnware.io." always_nxdomain
 local-zone: "cdnwidget.com." always_nxdomain
 local-zone: "cdp.asia." always_nxdomain
@@ -7888,6 +7873,7 @@ local-zone: "chavosh.org." always_nxdomain
 local-zone: "chbjfuuixum.xyz." always_nxdomain
 local-zone: "chbvrgjgkuv.com." always_nxdomain
 local-zone: "chbzsem.com." always_nxdomain
+local-zone: "webtrack.chd01.com." always_nxdomain
 local-zone: "cheap-jewelry-online.com." always_nxdomain
 local-zone: "cheap-result.pro." always_nxdomain
 local-zone: "cnpxwl.cheapcaribbean.com." always_nxdomain
@@ -10310,7 +10296,6 @@ local-zone: "cookie.codemarketing.cloud." always_nxdomain
 local-zone: "log.codemarketing.cloud." always_nxdomain
 local-zone: "codeonclick.com." always_nxdomain
 local-zone: "coderformylife.info." always_nxdomain
-local-zone: "uploads.codesandbox.io." always_nxdomain
 local-zone: "codesbro.com." always_nxdomain
 local-zone: "analytics.codeskulptor.org." always_nxdomain
 local-zone: "codesour.com." always_nxdomain
@@ -10526,6 +10511,7 @@ local-zone: "fyccsw.eobuwie.com.pl." always_nxdomain
 local-zone: "eoseurlingeringont.com.ua." always_nxdomain
 local-zone: "epec.com.bd." always_nxdomain
 local-zone: "metrics.escape.com.au." always_nxdomain
+local-zone: "esoviajar.com.br." always_nxdomain
 local-zone: "ezhealthcare.com.pk." always_nxdomain
 local-zone: "facilmenteon.com.br." always_nxdomain
 local-zone: "facitrh.com.br." always_nxdomain
@@ -10582,6 +10568,7 @@ local-zone: "huoche.com.cn." always_nxdomain
 local-zone: "geoloc.hurriyet.com.tr." always_nxdomain
 local-zone: "t.hypers.com.cn." always_nxdomain
 local-zone: "i24.com.ua." always_nxdomain
+local-zone: "mwzbp.iask.com.cn." always_nxdomain
 local-zone: "idealli.com.br." always_nxdomain
 local-zone: "bqvndd.ifood.com.br." always_nxdomain
 local-zone: "immoinvest.com.br." always_nxdomain
@@ -12424,6 +12411,7 @@ local-zone: "delusionalrevolt.com." always_nxdomain
 local-zone: "delusionfirmly.com." always_nxdomain
 local-zone: "sstats.deluxe.com." always_nxdomain
 local-zone: "bitwarden.deluxe-services.xyz." always_nxdomain
+local-zone: "deluxeconge.digital." always_nxdomain
 local-zone: "delwanqatar.com." always_nxdomain
 local-zone: "demand.supply." always_nxdomain
 local-zone: "demandbase.com." always_nxdomain
@@ -14069,7 +14057,6 @@ local-zone: "dispbaktun.com." always_nxdomain
 local-zone: "disperserepeatedly.com." always_nxdomain
 local-zone: "displacementsjournal.com." always_nxdomain
 local-zone: "display.io." always_nxdomain
-local-zone: "display-baptism.net." always_nxdomain
 local-zone: "displayadsmedia.com." always_nxdomain
 local-zone: "displayfly.com." always_nxdomain
 local-zone: "displayinterads.com." always_nxdomain
@@ -16608,6 +16595,7 @@ local-zone: "coopcentro.fin.ec." always_nxdomain
 local-zone: "finad.de." always_nxdomain
 local-zone: "news.finance-commerce.com." always_nxdomain
 local-zone: "finance-hot-news.com." always_nxdomain
+local-zone: "financenews.life." always_nxdomain
 local-zone: "financialanalystinfo.com." always_nxdomain
 local-zone: "ads.financialcontent.com." always_nxdomain
 local-zone: "tracker.financialcontent.com." always_nxdomain
@@ -18777,6 +18765,7 @@ local-zone: "greeentea.ru." always_nxdomain
 local-zone: "green-ads.net." always_nxdomain
 local-zone: "green-red.com." always_nxdomain
 local-zone: "green-search-engine.com." always_nxdomain
+local-zone: "green4762.com." always_nxdomain
 local-zone: "greenadblocker.com." always_nxdomain
 local-zone: "greenbeanph.com." always_nxdomain
 local-zone: "tms.hft.greenchef.com." always_nxdomain
@@ -19624,6 +19613,7 @@ local-zone: "adv-ettoday.cdn.hinet.net." always_nxdomain
 local-zone: "osd-onead.cdn.hinet.net." always_nxdomain
 local-zone: "osm-onead.cdn.hinet.net." always_nxdomain
 local-zone: "ssp.hinet.net." always_nxdomain
+local-zone: "hingamgladther.com." always_nxdomain
 local-zone: "ablinks.mail.hinge.co." always_nxdomain
 local-zone: "hinkhimunpractical.com." always_nxdomain
 local-zone: "c1.hinta.fi." always_nxdomain
@@ -19852,7 +19842,9 @@ local-zone: "sdfasefeeeee.hopjuu.fun." always_nxdomain
 local-zone: "hoppedobscurefame.com." always_nxdomain
 local-zone: "hopperbanespirits.com." always_nxdomain
 local-zone: "hopperimprobableclotted.com." always_nxdomain
+local-zone: "hopsackmoth.com." always_nxdomain
 local-zone: "hopuchcompa.com." always_nxdomain
+local-zone: "horaebanca.life." always_nxdomain
 local-zone: "horetersw.com." always_nxdomain
 local-zone: "data-975521d9ad.horizont.net." always_nxdomain
 local-zone: "horizontallyclenchretro.com." always_nxdomain
@@ -19930,6 +19922,7 @@ local-zone: "svc-1000-analytics-usf.hotyon.com." always_nxdomain
 local-zone: "hotzoneunspeed.com." always_nxdomain
 local-zone: "houfopsichoa.com." always_nxdomain
 local-zone: "houlb.com." always_nxdomain
+local-zone: "houpeera.net." always_nxdomain
 local-zone: "partners.hourmediagroup.com." always_nxdomain
 local-zone: "houseloan.live." always_nxdomain
 local-zone: "houseofpubs.com." always_nxdomain
@@ -20125,7 +20118,6 @@ local-zone: "detnmz.hunker.com." always_nxdomain
 local-zone: "hunterdelivery.com." always_nxdomain
 local-zone: "hunterers.com." always_nxdomain
 local-zone: "smetrics.huntington.com." always_nxdomain
-local-zone: "huntington-careers.com." always_nxdomain
 local-zone: "ensighten.huntingtonbank.com." always_nxdomain
 local-zone: "huntmad.com." always_nxdomain
 local-zone: "huoying666.com." always_nxdomain
@@ -20496,6 +20488,7 @@ local-zone: "iklanumum.com." always_nxdomain
 local-zone: "iklrge.com." always_nxdomain
 local-zone: "ikmtrust.com." always_nxdomain
 local-zone: "ikouthaupi.com." always_nxdomain
+local-zone: "ikrail.com." always_nxdomain
 local-zone: "ikrauteri.life." always_nxdomain
 local-zone: "ikuhentai.net." always_nxdomain
 local-zone: "analytics.ikyu.com." always_nxdomain
@@ -20545,6 +20538,7 @@ local-zone: "iludmt.com." always_nxdomain
 local-zone: "ilyf4amifh.com." always_nxdomain
 local-zone: "1.im.cz." always_nxdomain
 local-zone: "im-apps.net." always_nxdomain
+local-zone: "im-creator.com." always_nxdomain
 local-zone: "ff.imacdn.com." always_nxdomain
 local-zone: "sponsor.imacdn.com." always_nxdomain
 local-zone: "image-ad.jp." always_nxdomain
@@ -20954,7 +20948,6 @@ local-zone: "inspectlet.com." always_nxdomain
 local-zone: "inspectorstrongerpill.com." always_nxdomain
 local-zone: "tracking.insperity.com." always_nxdomain
 local-zone: "inspirationhistorical.com." always_nxdomain
-local-zone: "content.inspire.com." always_nxdomain
 local-zone: "inspirecarriermagnetic.com." always_nxdomain
 local-zone: "inspxtrc.com." always_nxdomain
 local-zone: "instabug.com." always_nxdomain
@@ -23138,7 +23131,6 @@ local-zone: "smetrics.lakeshorelearning.com." always_nxdomain
 local-zone: "lakewoodmediagroup.net." always_nxdomain
 local-zone: "lakfbvoskxlc.com." always_nxdomain
 local-zone: "lalapush.com." always_nxdomain
-local-zone: "lalingualavita.com." always_nxdomain
 local-zone: "lalocandadelteatro.it." always_nxdomain
 local-zone: "lalofilters.website." always_nxdomain
 local-zone: "laluvygy.com." always_nxdomain
@@ -24236,7 +24228,6 @@ local-zone: "jtracking.lulusoft.com." always_nxdomain
 local-zone: "perr.lum-sdk.io." always_nxdomain
 local-zone: "ametrics.lumen.com." always_nxdomain
 local-zone: "luminate.com." always_nxdomain
-local-zone: "luminodesignpark.com." always_nxdomain
 local-zone: "lumitos.com." always_nxdomain
 local-zone: "lumnstoodthe.info." always_nxdomain
 local-zone: "lumpmancommos.guru." always_nxdomain
@@ -24445,8 +24436,8 @@ local-zone: "xray.mail.ru." always_nxdomain
 local-zone: "tracker.mail-komplet.cz." always_nxdomain
 local-zone: "analytics.maileon.com." always_nxdomain
 local-zone: "track.mailerlite.com." always_nxdomain
+local-zone: "mailerrobands.website." always_nxdomain
 local-zone: "mailieungka.com." always_nxdomain
-local-zone: "stats.mailingboss.com." always_nxdomain
 local-zone: "maillovelove.net." always_nxdomain
 local-zone: "mailmunch.co." always_nxdomain
 local-zone: "ad.mailo.com." always_nxdomain
@@ -26418,6 +26409,7 @@ local-zone: "banstat.nadavi.net." always_nxdomain
 local-zone: "sig.nadex.com." always_nxdomain
 local-zone: "naggingirresponsible.com." always_nxdomain
 local-zone: "nagues.com." always_nxdomain
+local-zone: "nah.uy." always_nxdomain
 local-zone: "nahccnovft.com." always_nxdomain
 local-zone: "nahnoji.cz." always_nxdomain
 local-zone: "nahotseetsoo.com." always_nxdomain
@@ -27885,7 +27877,7 @@ local-zone: "data-684c5faba8.ok-magazin.de." always_nxdomain
 local-zone: "data-fe452b2ed9.ok-magazin.de." always_nxdomain
 local-zone: "okaks.com." always_nxdomain
 local-zone: "okanjo.com." always_nxdomain
-local-zone: "gi.okapisail.com." always_nxdomain
+local-zone: "okapisail.com." always_nxdomain
 local-zone: "analytics.okazii.ro." always_nxdomain
 local-zone: "okienamare.com." always_nxdomain
 local-zone: "okitwpyslqm.com." always_nxdomain
@@ -28224,7 +28216,6 @@ local-zone: "opencartextensions.in." always_nxdomain
 local-zone: "opencoccoc.com." always_nxdomain
 local-zone: "piwik.opendesktop.org." always_nxdomain
 local-zone: "analytics.opendi.com." always_nxdomain
-local-zone: "web.opendrive.com." always_nxdomain
 local-zone: "openerkey.com." always_nxdomain
 local-zone: "openfpcdn.io." always_nxdomain
 local-zone: "openinstall.io." always_nxdomain
@@ -28319,11 +28310,7 @@ local-zone: "optimallimit.com." always_nxdomain
 local-zone: "optimisticminiaturizationdowry.com." always_nxdomain
 local-zone: "optimix.asia." always_nxdomain
 local-zone: "optimix.cn." always_nxdomain
-local-zone: "api.optimizely.com." always_nxdomain
-local-zone: "a21018620252.cdn.optimizely.com." always_nxdomain
-local-zone: "log.optimizely.com." always_nxdomain
-local-zone: "log3.optimizely.com." always_nxdomain
-local-zone: "logx.optimizely.com." always_nxdomain
+local-zone: "optimizely.com." always_nxdomain
 local-zone: "optimizesrv.com." always_nxdomain
 local-zone: "optimizeyourmac.com." always_nxdomain
 local-zone: "front.optimonk.com." always_nxdomain
@@ -28361,6 +28348,7 @@ local-zone: "mtcs.nhk.or.jp." always_nxdomain
 local-zone: "www.silwel.or.kr." always_nxdomain
 local-zone: "tms.oracle.com." always_nxdomain
 local-zone: "visit-prod-us.occa.ocs.oraclecloud.com." always_nxdomain
+local-zone: "objectstorage.us-phoenix-1.oraclecloud.com." always_nxdomain
 local-zone: "oracleinfinity.io." always_nxdomain
 local-zone: "oralistnations.com." always_nxdomain
 local-zone: "orallantyneth.com." always_nxdomain
@@ -30984,7 +30972,6 @@ local-zone: "rqd.qq.com." always_nxdomain
 local-zone: "rs1.qq.com." always_nxdomain
 local-zone: "rs2.qq.com." always_nxdomain
 local-zone: "scdown.qq.com." always_nxdomain
-local-zone: "localhost.sec.qq.com." always_nxdomain
 local-zone: "t.sj.qq.com." always_nxdomain
 local-zone: "sngapm.qq.com." always_nxdomain
 local-zone: "sngmta.qq.com." always_nxdomain
@@ -31827,7 +31814,7 @@ local-zone: "requestcatcher.com." always_nxdomain
 local-zone: "cdn.requestmetrics.com." always_nxdomain
 local-zone: "in.requestmetrics.com." always_nxdomain
 local-zone: "requestvillagedeplorable.com." always_nxdomain
-local-zone: "a.reryn2ce.com." always_nxdomain
+local-zone: "reryn2ce.com." always_nxdomain
 local-zone: "res-smartd.info." always_nxdomain
 local-zone: "ris.res-x.com." always_nxdomain
 local-zone: "resalag.com." always_nxdomain
@@ -36182,7 +36169,6 @@ local-zone: "reg.techweb.com." always_nxdomain
 local-zone: "techyhint.com." always_nxdomain
 local-zone: "data-c48adafa24.teckbote.de." always_nxdomain
 local-zone: "tecnimpspa.com." always_nxdomain
-local-zone: "tecnoelectrica.cl." always_nxdomain
 local-zone: "tecnofrota.net." always_nxdomain
 local-zone: "tecnolibre.net." always_nxdomain
 local-zone: "tecominchisel.com." always_nxdomain
@@ -37086,6 +37072,7 @@ local-zone: "stats.tou.tv." always_nxdomain
 local-zone: "touchclarity.com." always_nxdomain
 local-zone: "touchoshirase.net." always_nxdomain
 local-zone: "touchtacchi.net." always_nxdomain
+local-zone: "analytics.tourhafen.de." always_nxdomain
 local-zone: "plus.tourispo.com." always_nxdomain
 local-zone: "tournamentdouble.com." always_nxdomain
 local-zone: "tournamentfraydirection.com." always_nxdomain
@@ -38347,6 +38334,7 @@ local-zone: "updserv-east-cdn3.com." always_nxdomain
 local-zone: "updts.at." always_nxdomain
 local-zone: "tracking.upfluence.co." always_nxdomain
 local-zone: "upforit.com." always_nxdomain
+local-zone: "upgalethalers.guru." always_nxdomain
 local-zone: "upgulpinon.com." always_nxdomain
 local-zone: "uphastod.xyz." always_nxdomain
 local-zone: "uphewoab.net." always_nxdomain
