--- a/unbound/doh-vpn-proxy-bypass.blacklist.conf
+++ b/unbound/doh-vpn-proxy-bypass.blacklist.conf
@@ -4,8 +4,8 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 29 Jun 2023 21:08 UTC
-# Version: 2023.0629.2108.00
+# Last modified: 01 Jul 2023 21:24 UTC
+# Version: 2023.0701.2124.57
 # Syntax: Unbound
 # Number of entries: 6267
 #
@@ -607,6 +607,7 @@ local-zone: "tungdnsne.duckdns.org." always_nxdomain
 local-zone: "dukun.de." always_nxdomain
 local-zone: "dutchproxy.nl." always_nxdomain
 local-zone: "dns.dutchwhite.nl." always_nxdomain
+local-zone: "dns.dyn1.de." always_nxdomain
 local-zone: "dynanyx.com." always_nxdomain
 local-zone: "ueni.dyndns.org." always_nxdomain
 local-zone: "resolver1.dyndnsinternetguide.com." always_nxdomain
@@ -6224,7 +6225,6 @@ local-zone: "xperienc.com." always_nxdomain
 local-zone: "xvbelink.com." always_nxdomain
 local-zone: "xvpn.io." always_nxdomain
 local-zone: "xvpn-web.com." always_nxdomain
-local-zone: "yahoodns.net." always_nxdomain
 local-zone: "yandex.com." always_nxdomain
 local-zone: "2.dnscrypt-cert.browser.yandex.net." always_nxdomain
 local-zone: "lion.yazilimatolye.com." always_nxdomain
