--- a/unbound/doh.blacklist.conf
+++ b/unbound/doh.blacklist.conf
@@ -4,10 +4,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 27 Jun 2023 21:08 UTC
-# Version: 2023.0627.2108.58
+# Last modified: 01 Jul 2023 21:26 UTC
+# Version: 2023.0701.2126.31
 # Syntax: Unbound
-# Number of entries: 748
+# Number of entries: 749
 #
 server:
 local-zone: "ns.00dani.me." always_nxdomain
@@ -287,6 +287,7 @@ local-zone: "tuandns.duckdns.org." always_nxdomain
 local-zone: "tungdnsne.duckdns.org." always_nxdomain
 local-zone: "dukun.de." always_nxdomain
 local-zone: "dns.dutchwhite.nl." always_nxdomain
+local-zone: "dns.dyn1.de." always_nxdomain
 local-zone: "ueni.dyndns.org." always_nxdomain
 local-zone: "resolver1.dyndnsinternetguide.com." always_nxdomain
 local-zone: "resolver2.dyndnsinternetguide.com." always_nxdomain
