--- a/unbound/fake.blacklist.conf
+++ b/unbound/fake.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 1 day
-# Last modified: 01 Jul 2023 21:36 UTC
-# Version: 2023.0701.2136.15
+# Last modified: 02 Jul 2023 22:22 UTC
+# Version: 2023.0702.2222.44
 # Syntax: Unbound
-# Number of entries: 15681
+# Number of entries: 15667
 #
 server:
 local-zone: "009972.com." always_nxdomain
@@ -932,7 +932,6 @@ local-zone: "attirecustom.com." always_nxdomain
 local-zone: "attireweb.shop." always_nxdomain
 local-zone: "attomik.com." always_nxdomain
 local-zone: "atttrade.com." always_nxdomain
-local-zone: "atulowe.shop." always_nxdomain
 local-zone: "atvelektro.de." always_nxdomain
 local-zone: "atwood.store." always_nxdomain
 local-zone: "au-app-growthnetwork.com." always_nxdomain
@@ -1845,7 +1844,6 @@ local-zone: "bombardina.pl." always_nxdomain
 local-zone: "bomberlonga.com." always_nxdomain
 local-zone: "bomomie.com." always_nxdomain
 local-zone: "bon-belle.shop." always_nxdomain
-local-zone: "bonatut.shop." always_nxdomain
 local-zone: "bonbelle.store." always_nxdomain
 local-zone: "boned-handels.com." always_nxdomain
 local-zone: "bonefab.com." always_nxdomain
@@ -2451,7 +2449,6 @@ local-zone: "cerd.cz." always_nxdomain
 local-zone: "cesapsrls.it." always_nxdomain
 local-zone: "ceskarna.net." always_nxdomain
 local-zone: "ceskomikulovskakuchyne.com." always_nxdomain
-local-zone: "cetedam.shop." always_nxdomain
 local-zone: "ceurwa.com." always_nxdomain
 local-zone: "cevobah.com." always_nxdomain
 local-zone: "cexcoin.cc." always_nxdomain
@@ -3636,7 +3633,6 @@ local-zone: "dessertspoonshop.com." always_nxdomain
 local-zone: "detaschemode.com." always_nxdomain
 local-zone: "detedeal.com." always_nxdomain
 local-zone: "13de.detoxic.net." always_nxdomain
-local-zone: "detulat.shop." always_nxdomain
 local-zone: "deuducht.de." always_nxdomain
 local-zone: "deuhr.de." always_nxdomain
 local-zone: "lsbgdup.deunatuweb.com." always_nxdomain
@@ -4093,7 +4089,6 @@ local-zone: "easytradeinvestment.com." always_nxdomain
 local-zone: "eatathome.de." always_nxdomain
 local-zone: "eatggrant.shop." always_nxdomain
 local-zone: "eaxritop.com." always_nxdomain
-local-zone: "ebaheni.shop." always_nxdomain
 local-zone: "eberhard-versand.de." always_nxdomain
 local-zone: "eberhard-versand.eu." always_nxdomain
 local-zone: "eberhard-wurst.de." always_nxdomain
@@ -4674,6 +4669,7 @@ local-zone: "expert-trademiners.com." always_nxdomain
 local-zone: "expertfxtrading.com." always_nxdomain
 local-zone: "expertisetrader4.net." always_nxdomain
 local-zone: "expertoptiontradings.com." always_nxdomain
+local-zone: "expertrader.me." always_nxdomain
 local-zone: "expertsinmoving.com." always_nxdomain
 local-zone: "exploratione.com." always_nxdomain
 local-zone: "expocrypt.com." always_nxdomain
@@ -5721,7 +5717,6 @@ local-zone: "getupsized.com." always_nxdomain
 local-zone: "getvoltbox.com." always_nxdomain
 local-zone: "getvoltplug.com." always_nxdomain
 local-zone: "getvoltsemi.com." always_nxdomain
-local-zone: "getwomenswear.com." always_nxdomain
 local-zone: "getzor.com." always_nxdomain
 local-zone: "gewichtreduces.net." always_nxdomain
 local-zone: "gewqas.com." always_nxdomain
@@ -5813,7 +5808,7 @@ local-zone: "glitzce.com." always_nxdomain
 local-zone: "glitzermoment.com." always_nxdomain
 local-zone: "gllomall.com." always_nxdomain
 local-zone: "glo-balexpress.com." always_nxdomain
-local-zone: "store.gload.info." always_nxdomain
+local-zone: "gload.info." always_nxdomain
 local-zone: "glob-markets.com." always_nxdomain
 local-zone: "glob-markets.net." always_nxdomain
 local-zone: "glob-markets.pro." always_nxdomain
@@ -6133,7 +6128,6 @@ local-zone: "gusmetn.com." always_nxdomain
 local-zone: "gusti-ledertaschen.de." always_nxdomain
 local-zone: "gutbutzow.de." always_nxdomain
 local-zone: "guteapotheke.org." always_nxdomain
-local-zone: "gutebih.shop." always_nxdomain
 local-zone: "gutehauswelpen.com." always_nxdomain
 local-zone: "guteholzheizung.de." always_nxdomain
 local-zone: "guterkauf.com." always_nxdomain
@@ -8961,7 +8955,6 @@ local-zone: "misucb.shop." always_nxdomain
 local-zone: "mit-mut.at." always_nxdomain
 local-zone: "mitchelsale.shop." always_nxdomain
 local-zone: "mitcryptos.de." always_nxdomain
-local-zone: "mitokeh.shop." always_nxdomain
 local-zone: "mitrueshop.com." always_nxdomain
 local-zone: "mitte-sued-ka.de." always_nxdomain
 local-zone: "mittyon.com." always_nxdomain
@@ -10172,7 +10165,6 @@ local-zone: "original-rezeptfrei.de." always_nxdomain
 local-zone: "oriondeals.com." always_nxdomain
 local-zone: "oriontero.com." always_nxdomain
 local-zone: "orionworldwide.com." always_nxdomain
-local-zone: "orisete.shop." always_nxdomain
 local-zone: "orizo.de." always_nxdomain
 local-zone: "orkanfx.com." always_nxdomain
 local-zone: "ormolulondon.com." always_nxdomain
@@ -10629,7 +10621,6 @@ local-zone: "pilulepro.com." always_nxdomain
 local-zone: "pinjamanduit.lol." always_nxdomain
 local-zone: "pinjamanelit.top." always_nxdomain
 local-zone: "pinjamanplus.com." always_nxdomain
-local-zone: "pinjamanrupiah.xyz." always_nxdomain
 local-zone: "pinjamantunai.xyz." always_nxdomain
 local-zone: "pinjamdana.live." always_nxdomain
 local-zone: "pinjamteman.top." always_nxdomain
@@ -11825,7 +11816,6 @@ local-zone: "salejoycarpet.com." always_nxdomain
 local-zone: "salelampshade.com." always_nxdomain
 local-zone: "salelegrand.com." always_nxdomain
 local-zone: "salelovediamond.com." always_nxdomain
-local-zone: "salemenrunning.com." always_nxdomain
 local-zone: "salemitchellness.com." always_nxdomain
 local-zone: "salemodeltoy.shop." always_nxdomain
 local-zone: "salenewshop.com." always_nxdomain
@@ -13274,7 +13264,6 @@ local-zone: "t3sler.com." always_nxdomain
 local-zone: "t7cafe.de." always_nxdomain
 local-zone: "tab-global.com." always_nxdomain
 local-zone: "tabakshop2000.de." always_nxdomain
-local-zone: "tabanih.shop." always_nxdomain
 local-zone: "tabbles.net." always_nxdomain
 local-zone: "tabflix.de." always_nxdomain
 local-zone: "tablegame.shop." always_nxdomain
@@ -13437,7 +13426,6 @@ local-zone: "teller-store.com." always_nxdomain
 local-zone: "tellersale.com." always_nxdomain
 local-zone: "tellwalkandtalk.com." always_nxdomain
 local-zone: "telser-two.site." always_nxdomain
-local-zone: "temaliy.shop." always_nxdomain
 local-zone: "temaotrade.com." always_nxdomain
 local-zone: "tempe-ro.com." always_nxdomain
 local-zone: "tempeie.com." always_nxdomain
@@ -13811,7 +13799,6 @@ local-zone: "tobias-lorsbach.de." always_nxdomain
 local-zone: "tobiflix.de." always_nxdomain
 local-zone: "tobiwag.de." always_nxdomain
 local-zone: "tobuyy.com." always_nxdomain
-local-zone: "tocuwer.shop." always_nxdomain
 local-zone: "today4deal.pro." always_nxdomain
 local-zone: "todayoffer.info." always_nxdomain
 local-zone: "todaytw.shop." always_nxdomain
@@ -13942,7 +13929,6 @@ local-zone: "tosamalls.com." always_nxdomain
 local-zone: "totalloseweight.com." always_nxdomain
 local-zone: "totalmenshoe.com." always_nxdomain
 local-zone: "totamalls.com." always_nxdomain
-local-zone: "totelis.shop." always_nxdomain
 local-zone: "toteme-outlet.com." always_nxdomain
 local-zone: "toth-gruppe.com." always_nxdomain
 local-zone: "totrendybags.com." always_nxdomain
